--- a/frontend/src/themes/cupcake.css
+++ b/frontend/src/themes/cupcake.css
@@ -4,6 +4,8 @@
   --text-primary: #291334;
   --text-secondary: #776a82;
   --accent-primary: #65275d;
+  --accent-primary-dark: #55174d;
+  --button-hover-text-color: white;
   --accent-primary-rgb: 101, 39, 93;
   --border-color: #d0c2d9;
 
