--- a/frontend/src/themes/dark.css
+++ b/frontend/src/themes/dark.css
@@ -4,6 +4,8 @@
   --text-primary: #e1e1e1;
   --text-secondary: #a8a8a8;
   --accent-primary: #bb86fc;
+  --accent-primary-dark: #a166fc;
+  --button-hover-text-color: #2c2c2c;
   --accent-primary-rgb: 187, 134, 252;
   --border-color: #2c2c2c;
 
