--- a/frontend/src/themes/emerald.css
+++ b/frontend/src/themes/emerald.css
@@ -4,6 +4,8 @@
   --text-primary: #333c4d;
   --text-secondary: #7d8799;
   --accent-primary: #66cc8a;
+  --accent-primary-dark: #44cc7a;
+  --button-hover-text-color: white;
   --accent-primary-rgb: 102, 204, 138;
   --border-color: #c5d1cb;
 
