--- a/frontend/src/themes/retro.css
+++ b/frontend/src/themes/retro.css
@@ -4,6 +4,8 @@
   --text-primary: #2e282a;
   --text-secondary: #7d7269;
   --accent-primary: #ef9d00;
+  --accent-primary-dark: #d68d00;
+  --button-hover-text-color: white;
   --accent-primary-rgb: 239, 157, 0;
   --border-color: #d4c8b0;
 
