--- a/frontend/src/themes/valentine.css
+++ b/frontend/src/themes/valentine.css
@@ -4,6 +4,8 @@
   --text-primary: #660033;
   --text-secondary: #99004d;
   --accent-primary: #ff3385;
+  --accent-primary-dark: #ff1a75;
+  --button-hover-text-color: white;
   --accent-primary-rgb: 255, 51, 133;
   --border-color: #f3c4d7;
 
